<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"

     android:background="@color/back"
    tools:context=".ui.auth.LoginActivity">

    <!-- Imagen arriba del texto "Bienvenido" -->
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/inicio"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crea_la_vida_que_deseas_en_pinterest"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginBottom="32dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:startIconDrawable="@drawable/ic_email"
        android:hint="@string/correo_electronico">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/TextCamposGris"
            android:padding="16dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:startIconDrawable="@drawable/ic_lock"
        app:endIconMode="password_toggle"
        android:hint="@string/contraseña">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/TextCamposGris"
            android:padding="16dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        android:backgroundTint="@color/RedButtons"
        android:textColor="@android:color/white"
        android:padding="12dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        app:cornerRadius="8dp" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sin_cuenta_registrar"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        android:height="48dp"/>

</LinearLayout>